--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,6 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: GitHub Action for pylint
-        uses: cclauss/GitHub-Action-for-pylint@master
+        uses: zerodaysec/github-action-for-python@main
         with:
           args: pylint **/*.py
