--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,41 @@
-altair==5.4.1
-attrs==24.2.0
-blinker==1.8.2
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-gitdb==4.0.11
-GitPython==3.1.43
-idna==3.10
-importlib-metadata==8.5.0
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-numpy==2.1.2
-packaging==24.1
-pandas==2.2.3
-Pillow==11.0.0
-protobuf==5.28.3
-pyarrow==17.0.0
-pydeck==0.9.1
-Pygments==2.18.0
-Pympler==1.1
-python-dateutil==2.9.0.post0
+-i https://pypi.org/simple
+altair==5.4.1; python_version >= '3.8'
+attrs==24.2.0; python_version >= '3.7'
+blinker==1.8.2; python_version >= '3.8'
+cachetools==5.5.0; python_version >= '3.7'
+certifi==2024.8.30; python_version >= '3.6'
+charset-normalizer==3.4.0; python_full_version >= '3.7.0'
+click==8.1.7; python_version >= '3.7'
+gitdb==4.0.11; python_version >= '3.7'
+gitpython==3.1.43; python_version >= '3.7'
+idna==3.10; python_version >= '3.6'
+jinja2==3.1.4; python_version >= '3.7'
+jsonschema==4.23.0; python_version >= '3.8'
+jsonschema-specifications==2024.10.1; python_version >= '3.9'
+markdown-it-py==3.0.0; python_version >= '3.8'
+markupsafe==3.0.2; python_version >= '3.9'
+mdurl==0.1.2; python_version >= '3.7'
+narwhals==1.11.1; python_version >= '3.8'
+numpy==2.1.2; python_version >= '3.10'
+packaging==24.1; python_version >= '3.8'
+pandas==2.2.3; python_version >= '3.9'
+pillow==10.4.0; python_version >= '3.8'
+protobuf==5.28.3; python_version >= '3.8'
+pyarrow==18.0.0; python_version >= '3.9'
+pydeck==0.9.1; python_version >= '3.8'
+pygments==2.18.0; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 pytz==2024.2
-pytz-deprecation-shim==0.1.0.post0
-referencing==0.35.1
-requests==2.32.3
-rich==13.9.3
-rpds-py==0.20.0
-six==1.16.0
-smmap==5.0.1
-streamlit==1.39.0
-tenacity==9.0.0
-toml==0.10.2
-toolz==1.0.0
-tornado==6.4.1
-typing_extensions==4.12.2
-tzdata==2024.2
-tzlocal==5.2
-urllib3==2.2.3
-validators==0.34.0
-zipp==3.20.2
+referencing==0.35.1; python_version >= '3.8'
+requests==2.32.3; python_version >= '3.8'
+rich==13.9.3; python_full_version >= '3.8.0'
+rpds-py==0.20.0; python_version >= '3.8'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+smmap==5.0.1; python_version >= '3.7'
+streamlit==1.39.0; python_version >= '3.8' and python_full_version != '3.9.7'
+tenacity==9.0.0; python_version >= '3.8'
+toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
+tornado==6.4.1; python_version >= '3.8'
+typing-extensions==4.12.2; python_version >= '3.8'
+tzdata==2024.2; python_version >= '2'
+urllib3==2.2.3; python_version >= '3.8'
