added spelling fixes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,9 +12,9 @@ repos:
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
       - id: check-added-large-files # prevents giant files from being committed.
-      - id: check-case-conflict # checks for files that would conflict in case-insensitive filesystems.
+      - id: check-case-conflict # checks for files that would conflict in case-insensitive filesystem.
       - id: check-merge-conflict # checks for files that contain merge conflict strings.
-      - id: check-yaml # checks yaml files for parseable syntax.
+      - id: check-yaml # checks yaml files for parsable syntax.
       - id: detect-private-key # detects the presence of private keys.
       - id: end-of-file-fixer # ensures that a file is either empty, or ends with one newline.
       - id: fix-byte-order-marker # removes utf-8 byte order marker.
@@ -38,7 +38,7 @@ repos:
           - --args=-recursive
       - id: terraform_docs
         args:
-          - --hook-config=--path-to-file=README.md # Valid UNIX path. I.e. ../TFDOC.md or docs/README.md etc.
+          - --hook-config=--path-to-file=README.md # Valid UNIX path. I.e. docs/README.md etc.
           - --hook-config=--add-to-existing-file=true # Boolean. true or false
           - --hook-config=--create-file-if-not-exist=true # Boolean. true or false
       - id: terraform_validate
