--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,7 @@ jobs:
         run: |
             pip install pylint
             OUTPUT=$(pylint ./app --exit-zero)
-            #OUTPUT=$(shell command or script to extract the part your want)
-            echo "MESSAGE=$OUTPUT" >> $GITHUB_ENV
+            echo "MESSAGE=my-output" >> $GITHUB_ENV
       - name: Post result to PR
         uses: mshick/add-pr-comment@v2
         with:
