--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,20 +6,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-    #   - name: GitHub Action for pylint
-    #     uses: zerodaysec/github-action-for-python@main
-    #     with:
-    #       args: pylint **/*.py
+      #   - name: GitHub Action for pylint
+      #     uses: zerodaysec/github-action-for-python@main
+      #     with:
+      #       args: pylint **/*.py
       - name: Lint with pylint
         run: |
-            pip install pylint
-            OUTPUT=$(pylint ./src --exit-zero)
-            #OUTPUT=$(shell command or script to extract the part your want)
-            echo "MESSAGE=$OUTPUT" >> $GITHUB_ENV
+          pip install pylint
+          OUTPUT=$(pylint ./app --exit-zero)
+          echo "MESSAGE=${OUTPUT}" >> $GITHUB_ENV
       - name: Post result to PR
         uses: mshick/add-pr-comment@v2
         with:
-            message: ${{ env.MESSAGE }}
-            repo-token: ${{ secrets.GITHUB_TOKEN }}
-            repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
-            allow-repeats: false # This is the default
+          message: ${{ env.MESSAGE }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token-user-login: "github-actions[bot]" # The user.login for temporary GitHub tokens
+          allow-repeats: false # This is the default
